--- a/styles/medium.css
+++ b/styles/medium.css
@@ -26,7 +26,7 @@ html {
     width: 7px;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: seagreen;
+    background-color: orange;
     border-radius: 5px;
 }
 ::-webkit-scrollbar-track {
