--- a/lesson2/styles/style.css
+++ b/lesson2/styles/style.css
@@ -7,8 +7,10 @@ body {
 body {
   margin: 0;
 }
+<style>
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
-html {
+</style> 
+{
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
 }
