--- a/lesson2/styles/style.css
+++ b/lesson2/styles/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
 }
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+@import url('https://fonts.google.com/specimen/Merriweather?query=merr');
 </style> 
 {
   line-height: 1.15;
