--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -347,3 +347,5 @@
   [hidden] {
     display: none;
   }
+  <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg" alt="Seth Markle profile picture">
+ 
