--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -1,3 +1,8 @@
-
-(min-width: 32.5em)
+@media only screen and (min-width: 32.5em) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+}
 
