--- a/lesson4/chamber/styles/medium.css
+++ b/lesson4/chamber/styles/medium.css
@@ -1,4 +1,6 @@
-body {
-    width: 90%;
+@media only screen and (min-width: 32.5em) {
+    main {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
 }
-
