--- a/lesson4/chamber/styles/style.css
+++ b/lesson4/chamber/styles/style.css
@@ -1,16 +1,23 @@
 element {
 }
 body {
-  max-width: 900px;
-  margin: 0 auto;
+  margin: 0;
+  display: grid;
+  grid-template-columns: auto 80% auto;
 }
 body {
   margin: 0;
 }
-<style>
-@import url('https://fonts.google.com/specimen/Merriweather?query=merr');
-</style> 
-{
+:root {
+  --main-color: #2e8b57;
+  --secondary-color: #add8e6;
+  --accent-color: #90ee90;
+  --default-light: #ffffff;
+  --default-dark: #2f2f2f;
+  --header-font: 'Exo 2', sans-serif;
+  --paragraph-font: 'Comfortaa', sans-serif;
+}
+html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
 }
