--- a/lesson4/chamber/styles/large.css
+++ b/lesson4/chamber/styles/large.css
@@ -3,4 +3,11 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     }
+    .wrapper {
+        display: flex;
+      }
+      
+      .wrapper > div {
+        flex: 1;
+      }      
 }
