--- a/lesson4/chamber/styles/large.css
+++ b/lesson4/chamber/styles/large.css
@@ -1,13 +1,26 @@
 @media only screen and (min-width: 62em) {
     main {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
     }
     .wrapper {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 100px 100px 100px;
+        gap: 10px;
+      }
+      .box1 {
+        grid-column: 2 / 4;
+        grid-row: 1;
       }
       
-      .wrapper > div {
-        flex: 1;
-      }      
-}
+      .box2 {
+        grid-column: 1;
+        grid-row: 1 / 3;
+      }
+      
+      .box3 {
+        grid-row: 2;
+        grid-column: 3;
+      }
+    }     
