--- a/lesson4/chamber/styles/large.css
+++ b/lesson4/chamber/styles/large.css
@@ -23,4 +23,13 @@
         grid-row: 2;
         grid-column: 3;
       }
+      img {
+        display: block;
+      }
+      *, ::before, ::after {
+        box-sizing: border-box;
+      }
+      body {
+        font-family: 'Acme', sans-serif;
+      }
     }     
