--- a/lesson4/chamber/styles/medium.css
+++ b/lesson4/chamber/styles/medium.css
@@ -1,4 +1,20 @@
-@media only screen and (min-width: 32.5em) {
+@media only screen and (min-width: 32.5em) {}
+
+nav button (display: none;)
+
+nav ul {
+	display: flex;
+	margin-left: 2vw;
+	border-right: 1px solid rgba(0,0,0,0.3);
+}
+
+nav ul li a {
+	border: none;
+	border-right: 1px solid rgba(0,0,0,0.3);
+}
+
+
+{
     main {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
