--- a/lesson4/chamber/styles/medium.css
+++ b/lesson4/chamber/styles/medium.css
@@ -1,6 +1,6 @@
-@media only screen and (min-width: 32.5em) {}
+@media only screen and (min-width: 32.5em) {
 
-nav button (display: none;)
+nav button {display: none;}
 
 nav ul {
 	display: flex;
@@ -13,8 +13,6 @@ nav ul li a {
 	border-right: 1px solid rgba(0,0,0,0.3);
 }
 
-
-{
     main {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
@@ -41,5 +39,3 @@ nav ul li a {
 	.navigation li:first-child {
 		display: none;
 	}
-}    
-}
