--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -102,9 +102,9 @@ nav ul li a {
     color: green;
     border-top: 1px solid rgba(0,0,0,0.5);
 
-    nav ul li a:hover {
+    nav ul li a:hover: {
         background-color: rgba(0,0,0,0.3);
-    }
+    
     nav ul li.active a {
         background-color: rgba(0,0,0,0.2);
         color: white;
@@ -117,4 +117,4 @@ nav ul li a {
     #hamburgerBtn span:nth-child(2) {display: none;}
 
     #hamburgerBtn.open span:nth-child(1) {display: none;}
-    #hamburgerBtn.open span:nth-child(2) (display: none;)
+    #hamburgerBtn.open span:nth-child(2) {display: none;}
