--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -102,7 +102,7 @@ nav ul li a {
     color: green;
     border-top: 1px solid rgba(0,0,0,0.5);
 
-    nav ul li a:hover: {
+    nav : li a:hover: {
         background-color: rgba(0,0,0,0.3);
     
     nav ul li.active a {
