--- a/lesson4/chamber/styles/large.css
+++ b/lesson4/chamber/styles/large.css
@@ -7,26 +7,31 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
     }
+
+#hero {
+  grid-column: 2 / 4;
+        grid-row: 1;
+}
+#event {
+  grid-column: 1;
+  grid-row: 1 / 3;
+}
+#weather {
+  grid-row: 2;
+  grid-column: 3;
+}
+#news {
+  grid-row: 2;
+  grid-column: 4;
+}
+
     .wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 100px 100px 100px;
         gap: 10px;
       }
-      .box1 {
-        grid-column: 2 / 4;
-        grid-row: 1;
-      }
       
-      .box2 {
-        grid-column: 1;
-        grid-row: 1 / 3;
-      }
-      
-      .box3 {
-        grid-row: 2;
-        grid-column: 3;
-      }
       img {
         display: block;
       }
