--- a/lesson4/chamber/styles/medium.css
+++ b/lesson4/chamber/styles/medium.css
@@ -1,49 +1,66 @@
-@media only screen and (min-width: 32.5em) {
-
-nav button {display: none;}
-
-nav ul {
-	display: flex;
-	margin-left: 2vw;
-	border-right: 1px solid rgba(0,0,0,0.3);
-}
-
-nav ul li a {
-	border: none;
-	border-right: 1px solid rgba(0,0,0,0.3);
-}
-
-    main {
+@media only screen and (min-width: 36.4em) {
+    /* ----------------header-------------------------- */
+    #formatted-date {
+        padding: 5px;
+    }
+    /* -----------------main--------------------------- */
+    .container {
+        margin: 10px;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: 250px 250px 250px 250px 250px;
+    }
+    .container p {
+        margin: 5px;
+    }
+    .hero {
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    .news {
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+    .spotlight {
+        grid-column: 1/3;
+        grid-row: 3/4;
+        margin: 5px;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-		display: grid;
+        grid-template-rows: 1fr;
+    }  
+    .spotlight-3 {
+        display: none;
+    }
+    .join {
+        display: block;
+        grid-column: 1/3;
+        grid-row: 4/5;
     }
 
-	#hero {}
-	#event {}
-	#weather {}
-	#news {}
-	
-    .wrapper {
-        display: flex;
-      }
-      
-      .wrapper > div {
-        flex: 1;
-      }
-      /* Media Query for medium+ views */
-
-	.navigation {
-		display: flex;
-	}
-	.navigation li {
-		display: block; /* change state in small view */
-		flex: 1 1 auto;
-	}
-	.navigation a {
-		text-align: center;
-	}
-	.navigation li:first-child {
-		display: none;
-	}
+    .events{
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+    .weather {
+        grid-column: 2/3;
+        grid-row: 5/6;
+    }
+    /* --------------------------footer-------------------------------- */
+    footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr ;
+    }
+    .information {
+        text-align: left;
+    }
+    .footer_logo {
+        width: 100px;
+    }
+    .contact_info {
+        text-align: right;
+    }
+    .footer_line {
+        grid-column: 1/3;
+    }
+    
 }
