--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -1,120 +1,125 @@
-main {
-    display: grid;
-    grid-template-columns: 1fr;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.place-holder {
-    background-color: gray;
-    padding: 10px;
-    margin: 20px;
-    margin-top: 5px;
+body {
+    font-family: "Roboto";
 }
-.wrapper {
-    display: flex;
-  }
-  
-  .wrapper > div {
-    flex: 1;
-  }      
-footer {
-    background-color: gray;
+/* -------------------------------header--------------------------------- */
+header {
+    background-color: #1c4839;
+    color: #d59c41;
+    padding: 15px;
 }
-h1 {
-    justify-self: start;
+.logo {
+    width: 120px;
+    margin-top: 15px;
 }
-    header {
-        grid-template-columns: auto 54.8px;
-    }
-    h2 {
-        text-align: center;
-    }
-    ul {
-        padding-left: 20px;
-        height: 80%;
-    }
-    /* Small/Phone View ***************/
-nav {
-	margin: 0 auto;
-	max-width: 760px;
-	background-color: tomato;
+.social_media img {
+    width: 40px;
 }
-.navigation {
-	list-style: none;
-	padding: 0;
+#formatted-date {
+    display: block;
+    background-color: #9f4900;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 15px;
+    margin: 15px 0;
 }
-.navigation li:first-child {
-	display: block;
+/* --------------------------------nav----------------------------------- */
+nav ul {
+    list-style: none;
+    font-size: 25px;
+    padding: 0;
+    margin: 0;
+    display: none;
 }
-.navigation li {
-	display: none;
+nav ul.open {
+    display: block;
 }
-.navigation a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: black;
-	font-weight: 700;
-	transition: 0.5s;
-	font-size: clamp(1rem, 2vmin, 1.5rem);
+nav ul li a {
+    color: #d59c41;
+    text-decoration: none;
+    font-family: "Poppins";
+    border-top: 1px solid #d59c41;
+    display: block;
+    padding: .8rem 2vw;
+    font-weight: bold;
 }
-
-.navigation a.ham::before {
-	content: "🍔 ";
-}
-
-.navigation a:hover {
-	color: white;
-	background-color: black;
-}
-
-/* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the responsive class is added to the end of the class list like this in HTML.
-  <ul class="navigation responsive">
-*/
-.responsive li {
-	display: block;
-}
-
-.responsive a.ham::before {
-	content: "❌ ";
-}
-
-/* small css example
-*/
 nav button {
     margin: .2rem 2vw;
     background: transparent;
     border: none;
     font-size: 2rem;
-    color: blue;
+    color: #d59c41;
 }
-nav {
-    background-color: white;
+nav button:hover {
+    color: #9f4900;
 }
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+nav ul li a:hover {
+    background-color: #9f4900;
 }
-nav ul li a {
-    display: block;
-    padding: .8rem 2vw;
+/* --------------------------------main---------------------------------- */
+.container {
+    margin: 5px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 150px 150px 150px 150px 300px;
+}
+.container p {
+    margin: 10px;
+    padding: 10px;
+    background-color: rgb(216, 212, 212);
+}
+.hero {
+    grid-column: 1;
+    grid-row: 1/2;
+}
+.events{
+    grid-column: 1;
+    grid-row: 2/3;
+}
+.weather {
+    grid-column: 1;
+    grid-row: 3/4;
+}
+.news {
+    grid-column: 1;
+    grid-row: 4/5;
+}
+.spotlight {
+    background-color: rgb(216, 212, 212);
+    grid-column: 1;
+    grid-row: 5/6;
+    margin: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}   
+.spotlight-3 {
+    display: none;
+}
+.join {
+    display: none;
+}
+/* -------------------------------footer--------------------------------- */
+footer {
+    background-color: #1c4839;
+    color: #d59c41;
+    padding: 15px;
+    text-align: center;
+}
+.footer_logo {
+    width: 80px;
+}
+hr {
+    color: #d59c41;
+}
+.direction {
     text-decoration: none;
-    color: green;
-    border-top: 1px solid rgba(0,0,0,0.5);
-
-    nav : li a:hover: {
-        background-color: rgba(0,0,0,0.3);
-    
-    nav ul li.active a {
-        background-color: rgba(0,0,0,0.2);
-        color: white;
-    }
-    nav ul li.hover a {
-        background-color: rgba(0,0,0,0.2);
-    }
-
-    #hamburgerBtn span:nth-child(1) {display: block;}
-    #hamburgerBtn span:nth-child(2) {display: none;}
-
-    #hamburgerBtn.open span:nth-child(1) {display: none;}
-    #hamburgerBtn.open span:nth-child(2) {display: none;}
+    color: #d59c41;
+}
+.footer_line {
+    margin-top: 15px;
+}
