--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -10,23 +10,23 @@ body {
 header {
     background-color: #255F85;
     color: #fefefe;
-    padding: 15px;
+    padding: 25px;
 }
 .logo {
     width: 120px;
-    margin-top: 15px;
+    margin-top: 25px;
 }
 .social_media img {
     width: 40px;
 }
 #formatted-date {
     display: block;
-    background-color: #481D24;
+    background-color: #255F85;
     text-align: center;
     font-weight: bold;
     font-size: 20px;
-    padding: 15px;
-    margin: 15px 0;
+    padding: 25px;
+    margin: 25px 0;
 }
 /* --------------------------------nav----------------------------------- */
 nav ul {
@@ -69,8 +69,8 @@ nav ul li a:hover {
     grid-template-rows: 150px 150px 150px 150px 300px;
 }
 .container p {
-    margin: 10px;
-    padding: 10px;
+    margin: 20px;
+    padding: 20px;
     background-color: rgb(216, 212, 212);
 }
 .hero {
@@ -93,7 +93,7 @@ nav ul li a:hover {
     background-color: rgb(216, 212, 212);
     grid-column: 1;
     grid-row: 5/6;
-    margin: 10px;
+    margin: 20px;
     display: grid;
     grid-template-rows: 1fr 1fr;
 }   
@@ -105,9 +105,9 @@ nav ul li a:hover {
 }
 /* -------------------------------footer--------------------------------- */
 footer {
-    background-color: #481D24;
+    background-color: #255F85;
     color: #fefefe;
-    padding: 15px;
+    padding: 25px;
     text-align: center;
 }
 .footer_logo {
@@ -121,5 +121,5 @@ hr {
     color: #fefefe;
 }
 .footer_line {
-    margin-top: 15px;
+    margin-top: 25px;
 }
