--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -6,6 +6,10 @@
 body {
     font-family: "Gugi";
 }
+h2 {
+    font-family: "Gugi";
+    color: black;
+}
 /* -------------------------------header--------------------------------- */
 header {
     background-color: #255F85;
@@ -16,17 +20,19 @@ header {
     width: 120px;
     margin-top: 15px;
 }
-.social_media img {
-    width: 40px;
-}
 #formatted-date {
     display: block;
-    background-color: #255F85;
+    background-color: #fefefe;
+    color: #fefefe;
     text-align: center;
     font-weight: bold;
     font-size: 20px;
     padding: 15px;
     margin: 15px 0;
+}
+#banner {
+    padding: 10px;
+    text-align: center;
 }
 /* --------------------------------nav----------------------------------- */
 nav ul {
@@ -40,10 +46,10 @@ nav ul.open {
     display: block;
 }
 nav ul li a {
-    color: #fefefe;
+    color: #481D24;
     text-decoration: none;
     font-family: "Gugi";
-    border-top: 1px solid #fefefe;
+    border-top: 1px solid #255F85;
     display: block;
     padding: .8rem 2vw;
     font-weight: bold;
@@ -53,54 +59,134 @@ nav button {
     background: transparent;
     border: none;
     font-size: 2rem;
-    color: #481D24;
+    color: #fefefe;
 }
 nav button:hover {
-    color: #481D24;
+    color: #fefefe;
 }
 nav ul li a:hover {
-    background-color: #481D24;
+    background-color: #fefefe;
 }
 /* --------------------------------main---------------------------------- */
-.container {
-    margin: 5px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 150px 150px 150px 150px 300px;
-}
-.container p {
-    margin: 20px;
-    padding: 10px;
-    background-color: rgb(216, 212, 212);
-}
+/* hero */
 .hero {
-    grid-column: 1;
-    grid-row: 1/2;
+    position: relative;
 }
-.events{
-    grid-column: 1;
-    grid-row: 2/3;
+.hero img {
+    width: 100%;
 }
+.hero_title {
+    position: absolute;
+    top: 1rem;
+    left: 10px;
+}
+.hero h2 {
+    font-weight: bold;
+    padding: 0 5px;
+    font-size: 25px;
+    color: #d59c41;
+    font-weight: bolder;
+    background-color: #f4e9e3;
+}
+.hero_button {
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+}
+.hero button {
+    border: none;
+    background-color: black;
+    color: black;
+    font-size: 30px;
+    padding: 10px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+.hero button:hover  {
+    background-color: #255F85;
+    color: black;
+    cursor: pointer;
+}
+/* events */
+.events {
+    background-color: #255F85;
+    padding: 20px;
+    text-align: center;
+}
+.events img {
+    width: 50%;
+}
+/* weather */
 .weather {
-    grid-column: 1;
-    grid-row: 3/4;
+    text-align: center;
+    padding: 0;
+    background-color: #fefefefe;
 }
+.weather img {
+    width: 70px;
+}
+figcaption {
+    padding-bottom: 10px;
+    color: #481D24;
+}
+.weather_information {
+    background-color: #255F85;
+    color: #fefefe;
+    padding: 10px;
+}
+.current_weather {
+    color: #fefefe;
+    font-weight: bold;
+    font-size: 25.5px;
+    font-family: "Gugi";
+}
+.weather_title {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+/* news */
 .news {
-    grid-column: 1;
-    grid-row: 4/5;
+    text-align: center;
+    background-color: #f4e9e3;
+    padding: 20px;
 }
-.spotlight {
-    background-color: rgb(216, 212, 212);
-    grid-column: 1;
-    grid-row: 5/6;
-    margin: 10px;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-}   
-.spotlight-3 {
+/* join */
+.join {
     display: none;
 }
-.join {
+/* spotlight */
+.spotlight {
+    margin: 10px;
+    background-color: #fefefe;
+    padding: 15px;
+}
+.spotlight hr {
+    margin: 10px 0;
+}
+/* spotlight_1 */
+.spotlight_1 {
+    background-color: #fefefe;
+    border-bottom: 1px solid #481D24;
+    text-align: center;
+    padding: 15px;
+}
+.spotlight_1 img {
+    width: 150px;
+    margin: 5px;
+}
+/* spotlight_2 */
+.spotlight_2 {
+    background-color: #fefefe;
+    text-align: center;
+    padding: 15px;
+}
+.spotlight_2 img {
+    width: 150px;
+    margin: 5px;
+}
+/* spotlight_3 */
+.spotlight_3 {
     display: none;
 }
 /* -------------------------------footer--------------------------------- */
@@ -122,4 +208,219 @@ hr {
 }
 .footer_line {
     margin-top: 15px;
+}
+
+/* --------------------------------------discover page------------------------------------------- */
+.discover_main {
+    padding: 10px;
+}
+.discover_main h2 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.discover_container img {
+    width: 100%;
+    border-radius: 10px;
+}
+.information img {
+    margin: 15px 0;
+}
+.image_gallery img {
+    margin-top: 20px;
+}
+.img1 {
+    width: 50%;
+}
+.visit {
+    width: 100%;
+    background-color: #255F85;
+    color: #fefefe;
+    padding: 15px;
+    margin: 15px 0;
+    font-family: "Gugi";
+    text-align: center;
+    font-weight: bold;
+}
+/* ---------------------------------------Join Page---------------------------------------------- */
+.join_page {
+    display: block;
+}
+.form_container {
+    margin-top: 20px;
+    background-color: #fefefe;
+    margin-top: 15px;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.form_container h1 {
+    color: #fefefe;
+}
+fieldset {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    border-radius: 10px;
+    padding: 10px;
+}
+legend {
+    color: #255F85;
+    padding: 10px;
+    font-size: 30px;
+}
+label {
+    color: #255F85;
+    padding: 8px;
+}
+label.top input {
+    display: block;
+    font-size: 1rem;
+    border: 1px solid #255F85;
+    border-radius: 5px;
+    padding: .75rem;
+    width: 90%;
+    max-width: 24rem;
+    background-color: rgb(228, 225, 225);
+}
+label.top input:required {
+    border-left: #481D24 solid 5px;
+}
+.submitbtn {
+    background-color: #481D24;
+    color: #fefefe;
+    font-family: "Gugi";
+    padding: 15px;
+    font-size: 20px;
+    border-radius: 10px;
+    margin: 10px 0;
+    border: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.submitbtn:hover {
+    background-color: #255F85;
+    color: #fefefe;
+}
+.membership_container {
+    display: none;
+}
+/* --------------------------------------thanks page--------------------------------------------- */
+.thanks_container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    position: absolute;
+    padding: 50px;
+    color: #fefefe;
+    font-family: "Gugi";
+    background-color: #255F85;
+}
+.thanks_img {
+    width: 160px;
+}
+.thanks_h1 {
+    color: #fefefe;
+    margin: 30px 0;
+}
+.thanks_p {
+    font-size: 20px;
+}
+.thanks_page button {
+    color: #fefefe;
+    background-color: #fefefe;
+    font-family: "Gugi";
+    font-size: 20px;
+    padding: 15px;
+    border: none;
+    width: fit-content;
+    border-radius: 25px;
+    margin-top: 50px;
+}
+.thanks_button:hover {
+    background-color: #fefefe;
+    color: #481D24;
+    cursor: pointer;
+}
+/* ----------------------------------Directory--------------------------------------------------- */
+.directory {
+    padding: 15px;
+}
+/* --------title---------------- */
+.directory h1 {
+    color: #fefefe;
+}
+/* ------buttons------------------ */
+.grid_list_button {
+    text-align: center;
+    margin: 30px 0;
+}
+#list, #grid {
+    font-size: 40px;
+    color: #481D24;
+    border: 2px solid #481D24;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+#list {
+    margin-right: 10px;
+}
+#grid {
+    margin-left: 10px;
+}
+/* -----cards serction---------- */
+.directory img {
+    width: 150px;
+}
+.directory_container.grid {
+    text-align: center;
+}
+/* ----------cards-------------- */
+.cards section {
+    margin: 15px 0;
+    padding: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+/* -------------list change---------- */
+.directory_container.list img{
+    display: none;
+}
+.directory_container.list h2 {
+    color: black;
+    font-size: 17px;
+}
+.directory_container.list section {
+    box-shadow: none;
+}
+.directory_container.list section:nth-child(even) {
+    background-color: #fefefe;
+}
+/* ----------------------------------------------- contact page ---------------------------------- */
+.contact_container {
+    padding: 10px;
+    background-color: #fefefe;
+}
+.contact_container h1 {
+    padding: 15px 0;
+    color: #fefefe;
+}
+.map_container {
+    margin: 30px 0 20px 0;
+}
+iframe {
+    width: 100%;
+    padding-bottom: 20px;
+}
+.sendbtn {
+    background-color: #481D24;
+    font-size: 20px;
+    padding: 10px 15px;
+    margin-top: 15px;
+    color: #fefefe;
+    border: none;
+    border-radius: 5px;
+}
+.sendbtn:hover {
+    background-color: #fefefe;
+    color: #255F85;
+    transition: 0.5s;
+    cursor: pointer;
 }
