--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -23,7 +23,7 @@ header {
 #formatted-date {
     display: block;
     background-color: #fefefe;
-    color: #fefefe;
+    color: #255F85;
     text-align: center;
     font-weight: bold;
     font-size: 20px;
