--- a/lesson4/chamber/styles/medium.css
+++ b/lesson4/chamber/styles/medium.css
@@ -5,50 +5,96 @@
     }
     /* -----------------main--------------------------- */
     .container {
-        margin: 10px;
+        display: grid;
         grid-template-columns: 60% 40%;
-        grid-template-rows: 250px 250px 250px 250px 250px;
+        grid-template-rows: 40vh 20vh 300px 160px 250px;
+        gap: 10px;
     }
-    .container p {
-        margin: 5px;
-    }
+    /* hero */
     .hero {
         grid-column: 1/3;
         grid-row: 1/2;
     }
+    .hero img {
+        width: 100%;
+        height: 370px;
+        object-fit: cover;
+    }
+    .hero button {
+        margin-right: 20px;
+        bottom: 40px;
+    }
+    .hero h2 {
+        font-size: 35px;
+    }
+    /* news */
     .news {
         grid-column: 1/3;
         grid-row: 2/3;
     }
+    /* spotlight */
     .spotlight {
         grid-column: 1/3;
         grid-row: 3/4;
-        margin: 5px;
+        display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-    }  
-    .spotlight-3 {
-        display: none;
+        grid-template-rows: 280px;
+        margin: 0;
     }
+    .spotlight_1 {
+        border-bottom: none;
+    }
+    .spotlight_1 h2 {
+        font-size: 20px;
+    }
+    .spotlight_1 img {
+        width: 150px;
+    }
+    /* join */
     .join {
         display: block;
         grid-column: 1/3;
         grid-row: 4/5;
+        background-color: #f4e9e3;
+        text-align: center;
+        padding: 15px;
     }
-
-    .events{
-        grid-column: 1/2;
-        grid-row: 5/6;
+    .join button {
+        font-family: "poppins";
+        border: none;
+        background-color: #225485;
+        color: #fefefe;
+        padding: 5px 15px;
+        width: 90%;
+        margin-top: 10px;
+        border-radius: 10px;
+        font-size: 20px;
     }
+    .join button:hover {
+        background-color: #d59c41;
+        color: #225485;
+    }
+    .join p {
+        margin-top: 20px;
+    }
+    /* weather */
     .weather {
-        grid-column: 2/3;
-        grid-row: 5/6;
+        background-color: #f4e9e3;
+    }
+    .weather_title {
+        gap: 10px;
+    }
+    .current_weather {
+        font-size: 15px;
+    }
+    .weather_title h2 {
+        font-size: 20px;
     }
     /* --------------------------footer-------------------------------- */
     footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr ;
+        grid-template-rows: 1fr 1fr 20px;
     }
     .information {
         text-align: left;
@@ -62,5 +108,130 @@
     .footer_line {
         grid-column: 1/3;
     }
-    
+    .weather_data {
+        grid-column: 1/3;
+    }
+    /* -----------------------------------------------discover page------------------------------- */
+    /* --------information------------- */
+    .information {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+    .urban img{
+        margin-top: 70px;
+    }
+    /* --------imagen gallery---------- */
+    .img_container {
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .img_container picture {
+        width: 300px;
+    }
+    /* --------imagen hover----------- */
+    picture {
+        position: relative;
+    }
+    .img_container img {
+        display: block;
+    }
+    .img_card {
+        position: absolute;
+        bottom: 0; 
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.5); /* Black see-through */
+        color: #f1f1f1; 
+        width: 100%;
+        transition: .5s ease;
+        opacity:0;
+        color: white;
+        font-size: 20px;
+        padding: 20px;
+        text-align: center;
+    }
+    picture:hover .img_card {
+        opacity: 1;
+    }
+    .visit {
+        grid-column: 1/3;
+    }
+    /* --------------------------------------------Join Page------------------------------------- */
+    .join_page {
+        display: grid;
+        grid-template-columns: 49% 2% 49%;
+        grid-template-rows: 1fr;
+        padding: 10px;
+    }
+    .form_container {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    /* ----------information panel----------- */
+    .membership_container {
+        display: block;
+        grid-column: 3/4;
+        grid-row: 1/2;
+        margin-top: 20px;
+        background-color: #225485;
+        margin-top: 15px;
+        border-radius: 10px;
+        padding: 15px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .membership_container h1 {
+        color: #d59c41;
+    }
+    .membership_container h2 {
+        color: #d59c41;
+        margin-top: 60px;
+        margin-bottom: 10px;
+    }
+    .membership_container li {
+        color: #fefefe;
+        list-style: none;
+    }
+    /* ----------------------------------------thamks page--------------------------------------- */
+    .thanks_page {
+        display: flex;
+        justify-content: center;
+        margin-top: 20%;
+    }
+    .thanks_container {
+        height: 400px;
+        text-align: center;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .thanks_button {
+        margin-left: 38%;
+    }
+    /* ---------------------------------------directory------------------------------------------ */
+    /* -----------buttons----------- */
+    #list:hover, #grid:hover {
+        color: #d59c41;
+        border: 2px solid #d59c41;
+    }
+    /* ----------cards--------------- */
+    .directory_container.grid .cards{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        gap: 15px;
+    }
+    /* -------------------------------------contact page ---------------------------------------- */
+    .contact_container {
+        display: flex;
+    }
+    .map_container {
+        background-color: #225485;
+        margin: 0 0 0 15px;
+        width: 100%;
+        padding: 15px;
+        border-radius: 15px;
+    }
+    .map_container p{
+        color: #fefefe;
+    }
 }
