--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -8,7 +8,7 @@ body {
 }
 h2 {
     font-family: "Gugi";
-    color: black;
+    color: white;
 }
 /* -------------------------------header--------------------------------- */
 header {
