--- a/lesson4/chamber/styles/small.css
+++ b/lesson4/chamber/styles/small.css
@@ -128,7 +128,7 @@ nav ul li a:hover {
 }
 figcaption {
     padding-bottom: 10px;
-    color: black;
+    color: #255F85;
 }
 .weather_information {
     background-color: #255F85;
