--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,7 +1,7 @@
 body{
     margin: .5rem;
     padding: .5rem;
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    font-family: font-family: 'Gugi', cursive;
     font-size: 16px;
 }
 
