--- a/styles/medium.css
+++ b/styles/medium.css
@@ -1,7 +1,12 @@
-@media screen and (min-width: 32.5em)
-    h1 {
-        font-size: 2.5rem;
-        margin: 1rem;
-        color: navy;
+@media only screen and (max-width: 990px){
+    main{
+     grid-template-columns: repeat(2, 1fr);
+     column-gap: 20px;
+     padding: 20px 20px;
+   
     }
-}
+   .section3{
+    grid-column: 1/3;
+    margin-top: 20px;
+   }
+   }
