--- a/styles/large.css
+++ b/styles/large.css
@@ -5,7 +5,7 @@
     --accent1-color: #ccdce0;
     --accent2-color: #f5b48e;
     /*fonts: */
-    --heading-font: Poppins, sans-serif;
+    --heading-font: Gugi, sans-serif;
    }
    
    body{
