--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,76 +1,12 @@
-@media only screen and (min-width: 35rem) {
-  
-    header img {
-      width: auto;
-    }
-  
-    header h1 {
-      font-size: 2rem;
-    }
-  
-    header h2 {
-      font-size: 1.5rem;
-    }
-  
-    #menuBtn {
-      display: none;
-    }
-  
-  
-    #menu {
-      max-height: unset;
-      opacity: 1;
-    }
-  
-    #menu ul {
-      display: flex;
-      flex-direction: row;
-      visibility: visible;
-    }
-  
-    #menu ul li {
-      flex-grow: 0;
-      padding: 0 1.2rem;0
-      
-    }
-  
-  
-    #summary {
-      position: relative;
-    }
-    
-    #summary > div {
-      border: 1px solid #70A288;
-      border-radius: 4px;
-      background-color: #031D44;
-      padding: 0 2%;
-      max-width: 30ex;
-      position: absolute;
-      top: 10%;
-      left: 4%;
-    }
-  
-  
-    #article {
-      display: block;
-    }
-   
-    #article img {
-      float: right;
-      min-width: 0;
-      max-width: 30ex;
-    }
-  
-    #contact {
-      flex-direction: row-reverse;
-      justify-content: space-around;
-    }
-  
-    #contact > * {
-      max-width: 40%;
-    }
-  
-    footer > p {
-      flex-direction: row;
-    }
-  } 
+@media only screen and (max-width: 990px){
+  main{
+   grid-template-columns: repeat(2, 1fr);
+   column-gap: 20px;
+   padding: 20px 20px;
+ 
+  }
+ .section3{
+  grid-column: 1/3;
+  margin-top: 20px;
+ }
+ }
